--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App description",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --exit",
+    "test": "NODE_ENV=test HOST=mockhost.com PORT=88 nyc ./node_modules/mocha/bin/mocha --exit",
     "start": "node server"
   },
   "repository": {
@@ -22,10 +22,10 @@
   "homepage": "https://github.com/billymfl/simple-microservices-template#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
     "eslint": "^6.3.0",
     "eslint-config-google": "^0.14.0",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1"
   },
   "dependencies": {
     "@hapi/hapi": "^18.3.2",
