--- a/env.example
+++ b/env.example
@@ -1,17 +1,10 @@
-// list of providers in comma delimited format. At least 1 REQUIRED
-PROVIDERS=mailgun,mailjet, etc...
+//Create a .env file and set any non-optional env vars or change default settings
 
-// keys for each listed provider. REQUIRED
-KEYS=key-for-mailgun, key-for-mailjet, etc...
-
-// how long to wait for a http request to a provider. defaults to 1 second
-TIMEOUT=10
-
-// port to listen on. defaults to 80
+// Port to listen on, default 80
 PORT=80
 
-// if need to set the host name. defaults to 0.0.0.0
-HOST=www.test.com
+// Host name, defaults to binding to docker container
+HOST='0.0.0.0'
 
-// the env, defaults to development
-NODE_ENV
+// the node environment, defaults to development
+NODE_ENV=development
