--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
   },
   "dependencies": {
     "@hapi/hapi": "^18.3.2",
+    "@hapi/inert": "^5.2.1",
+    "@hapi/vision": "^5.5.3",
     "debug": "^4.1.1",
-    "dotenv": "^8.1.0"
+    "dotenv": "^8.1.0",
+    "hapi-swagger": "^10.1.1"
   }
 }
